--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ li {
 
 .contact {
 
-    background-image: url("/image1.jpg");
+    background-image: url("image1.jpg");
     height: 600px;
     width: 100%;
     display: flex;
@@ -79,7 +79,7 @@ li {
 
 .Exppro {
 
-    background-image: url("/image2.jpg");
+    background-image: url("image2.jpg");
     height: 700px;
 }
 
@@ -87,7 +87,7 @@ li {
 .formation {
 
 
-    background-image: url("/image1.jpg");
+    background-image: url("image1.jpg");
     height: 900px;
 
 }
@@ -97,7 +97,7 @@ li {
 .scolarite {
 
 
-    background-image: url("/image2.jpg");
+    background-image: url("image2.jpg");
     height: 900px;
 
 }
